# pe-compliance-app

./: .dockerignore  .env  Dockerfile  README.md  build.sh  code-quality-check.sh  deployment-guide.md  pyproject.toml  test-env.txt  test_logging.py  todo.md
.github/workflows/: ci-cd.yml  pe-compliance-app-ci-cd.yml
doc/: table_creation.sql
scripts/: setup-ecs.sh
sql/: table_creation.sql
src/: example_usage.py  main.py
src/client/: __init__.py  hkex_news_client.py  hkma_client.py  sec_news_client.py  sfc_news_client.py
src/config/: __init__.py  database.py  settings.py
src/constant/: __init__.py  prompt_constants.py  status_constants.py
src/model/: compliance_news.py
src/repo/: __init__.py  compliance_news_repository.py
src/router/: __init__.py  health_router.py  news_router.py
src/schemas/: __init__.py  response_schemas.py
src/service/: __init__.py  agent_service.py  compliance_news_service.py  hkex_news_service.py  hkma_news_service.py  sec_news_service.py  sfc_news_service.py
src/util/: __init__.py  date_util.py  logging_util.py
