[project]
name = "financial-news-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pymysql>=1.0.0",
    "cryptography>=3.4.8",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.1.0"
]
