[project]
name = "pe_compliance_news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pymysql>=1.0.0",
    "cryptography>=3.4.8",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.1.0",
    "fastapi>=0.115.14",
    "uvicorn>=0.28.0",
    "markdown2>=2.5.3",
    "beautifulsoup4==4.13.4",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]
